[package]
name = "vinted_event_tracker"
version = "0.1.0"
authors = ["Evaldas Buinauskas <evaldas.buinauskas@vinted.com>"]
edition = "2018"

[dependencies]
bytes = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
