[package]
name = "vinted_event_tracker"
version = "0.1.0"
authors = ["Evaldas Buinauskas <evaldas.buinauskas@vinted.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
